# tcc_madr

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
madr/: app.py  models.py  schemas.py  security.py
madr/routers/: auth.py  livro.py  romancista.py  users.py
migrations/: env.py
migrations/versions/: 6440ce475198_criação_da_model_inicial.py
tests/: conftest.py  test_auth.py  test_db.py  test_livro.py  test_romancista.py  test_security.py  test_users.py
